# graal

./: README.md  SearchPseudoAlg  data-struct-repl.patch  run.sh
TestCode/: DangerClass.java  HelloWorld.java  MapSizeTest.java  TestClass.java  run.sh  tslog  tsmon  tstime
TestCode/PerformanceTesting/TuningSynthetic/: HelloWorld.java
idealgraphvisualizer/: Readme.md  release
idealgraphvisualizer/etc/: idealgraphvisualizer.conf
idealgraphvisualizer/extide/update_tracking/: org-apache-tools-ant-module.xml  org-netbeans-modules-options-java.xml
idealgraphvisualizer/harness/update_tracking/: org-netbeans-insane.xml
idealgraphvisualizer/ide/update_tracking/: com-google-gson.xml  libs-c-kohlschutter-junixsocket.xml  org-apache-xml-resolver.xml  org-netbeans-api-debugger.xml  org-netbeans-api-java-classpath.xml  org-netbeans-api-xml-ui.xml  org-netbeans-api-xml.xml  org-netbeans-core-ide.xml  org-netbeans-lib-terminalemulator.xml  org-netbeans-libs-antlr3-runtime.xml  org-netbeans-libs-antlr4-runtime.xml  org-netbeans-libs-freemarker.xml  org-netbeans-libs-graalsdk.xml  org-netbeans-libs-json_simple.xml  org-netbeans-libs-lucene.xml  org-netbeans-modules-code-analysis.xml  org-netbeans-modules-csl-api.xml  (+89 more)
idealgraphvisualizer/idealgraphvisualizer/: org.eclipse.jdt.core.prefs
jol-maps/: dependency-reduced-pom.xml  pom.xml  results.txt  run.sh
object_demographics/: CMakeLists.txt  build.sh  callbacks.cpp  callbacks.h  library.cpp  library.h
object_demographics/test/: App.java  run.sh
substratevm/mx.substratevm/: mx_substratevm.py  suite.py
(+291 files in other folders)
